--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "hangul-js": "^0.2.6",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1"
